tests/src/frontend/syntax/invalid/mistake_let.sk
fun main(): String {
  let myint = 10;
}
